# Resumi

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  local_calendar.csv  pyproject.toml
.github/workflows/: ci.yml
docs/courses/: Cours4_DataManagement_Partie3.txt  Cours7_DataViz_Seaborn.txt  Encadre_Ridge_prediction.txt  Fiche_revision_econometrie_marche_immobilier.txt  Fiche_revision_econometrie_version_elaboree.txt  Fiche_revision_regularisation_Ridge_Lasso.txt  Statistics_Notes_1_Introduction.txt  Statistics_Slides_2_Linear_Model_In_Practice.txt  Statistics_Slides_2_linear_model.txt  Statistics_Slides_4_Heteroskedasticity.txt  Statistics_Slides_4_tests.txt  Support de cours NEO4J.pptx  architecture.md  fiche_stat_econometrie.txt
src/resumi/: config.py  main.py
src/resumi/core/: agent.py  audio_handler.py  calendar.py  document_loader.py  document_store.py  embedding.py  gmail_handler.py  langchain_agent.py  mail_loader.py  mail_tools.py  tools.py  web_search.py
src/resumi/ui/: chat.py  gradio_ui.py
tests/: test_calendar.py  test_health.py  test_tool_routing.py
